<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestLibMuseAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Relative Alphas:</string>
    <string name="beta_elem">Relative Betas:</string>
    <string name="delta_elem">Relative Deltas:</string>
    <string name="gamma_elem">Relative Gammas:</string>
    <string name="theta_elem">Relative Thetas:</string>
    <string name="alpha_wave">Alpha Wave</string>
    <string name="beta_wave">Beta Wave</string>
    <string name="delta_wave">Delta Wave</string>
    <string name="gamma_wave">Gamma Wave</string>
    <string name="theta_wave">Theta Wave</string>
</resources>
