<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/muses_spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh" />
        <Button
            android:id="@+id/connect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/connect" />
        <Button
            android:id="@+id/disconnect"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/disconnect" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:textSize="16sp"
        android:text="@string/status"
        android:paddingLeft="5dp" />
    <TextView
        android:id="@+id/con_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:textSize="16sp"
        android:text="@string/undefined"
        android:paddingLeft="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31"
        android:gravity="center_vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha_wave"
            android:id="@+id/a_box"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beta_wave"
            android:id="@+id/b_box" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delta_wave"
            android:id="@+id/d_box" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamma_wave"
            android:id="@+id/g_box" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theta_wave"
            android:id="@+id/t_box"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="0.14">
        <Button
            android:id="@+id/pause"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:text="@string/pause"
            android:singleLine="false"
            android:layout_weight="0.25" />

    </LinearLayout>
</LinearLayout>

