<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/muse_elem"
    android:paddingLeft="5dp"
    android:paddingTop="5dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/elem1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
    <TextView
        android:id="@+id/elem2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
    <TextView
        android:id="@+id/elem3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
    <TextView
        android:id="@+id/elem4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
</LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/beta_elem"
    android:id="@+id/betaHead"
    android:paddingLeft="5dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/beta1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/beta2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/beta3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/beta4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
</LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/delta_elem"
    android:id="@+id/deltaHead"
    android:paddingLeft="5dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/delta1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/delta2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/delta3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/delta4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
</LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/gamma_elem"
    android:id="@+id/gammaHead"
    android:paddingLeft="5dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/gamma1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/gamma2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/gamma3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/gamma4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
</LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/theta_elem"
    android:id="@+id/thetaHead"
    android:paddingLeft="5dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/theta1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/theta2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/theta3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/theta4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/init_val"
        android:paddingLeft="5dp" />
</LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/version"
    android:paddingLeft="5dp" />
<TextView
    android:id="@+id/version"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:textSize="16sp"
    android:text="@string/undefined"
    android:paddingLeft="5dp" />

</LinearLayout>